Fixed Submit button action and css styles
Moved CTA back inside form tag for better semantics and to have submit button work as part of the form.

Had to replace CTA section tag with div since it messed up the scroll/click event delegation (looked for nearest SECTION tag).

Also updated css class names

--- a/colors.css
+++ b/colors.css
@@ -80,7 +80,7 @@ input[type="password"]:focus,
   border-color: var(--accent-color2-500);
 }
 
-.cta-sticky {
+.cta-sticky-container {
   background-color: hsla(218, 12%, 18%, 1);
   background-color: var(--primary-color-500);
   box-shadow: 1 1 1px hsla(0, 0%, 0%, 1);
